# mecfs-target-discovery

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
data/cache/open_targets/: ensembl_ABCA10.json  ensembl_ABCA6.json  ensembl_BTN2A2.json  ensembl_BTN3A1.json  ensembl_BTN3A2.json  ensembl_MAMDC4.json  ensembl_OLFM4.json  ensembl_PTPRD.json  ensembl_RABGAP1L.json  gene_ENSG00000102837.json
data/decodeme/: loci.json
scripts/: fetch_decodeme.py
src/: models.py  server.py
src/connectors/: decodeme.py  open_targets.py
src/tools/: query_decodeme.py  rank_targets.py
tests/: conftest.py  test_query_decodeme.py
