[project]
name = "mecfs-target-discovery"
version = "0.1.0"
description = "MCP server for ME/CFS druggable treatment-target discovery — genetics-first, provenance-first."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "duckdb>=1.0",
    "networkx>=3.3",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "syrupy>=4",
    "respx>=0.21",
]

[project.scripts]
mecfs-mcp = "src.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
